--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -1,7 +1,7 @@
-<!DOCTTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
-        <meta charset="utf-8" />
+		<meta charset="utf-8" />
 		<title>TIC TAC TOE</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
@@ -12,12 +12,25 @@
 		<!-- Names for the players -->
 		<div id="players">
 			<div class="player1 player active">
-				<span class="player1_play">X</span>: <span class="player name">Player 1</span>
+				<span class="player1_play">X</span>: <span class="player1_name">Player 1</span>
 			</div>
 			<div class="player2 player">
-				<span class="player2_play">O</span>: <span class="player name">Player 2</span>
+				<span class="player2_play">O</span>: <span class="player2_name">Player 2</span>
 			</div>
 		</div>
+
+		<!-- Scores for the players -->
+		<div id="scores">
+			<div class="score">
+				<span class="player1_score">0</span>
+			</div>
+			<div class="score">
+				<span class="player2_score">0</span>
+			</div>
+		</div>
+
+		<!-- message div -->
+		<div id="msg"></div>
 		
 		<!-- Table for the game -->
 		<table id="table_game">
@@ -38,6 +51,7 @@
 			</tr>
 		</table>
 
+		<script type="text/javascript" src="js/helpers.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
